package com.example.hethongquanlydatvexe.service;

public interface DiscountPolicy {
    double calculateDiscount(double basePrice);
}