package com.example.hethongquanlydatvexe.service;

public interface PaymentMethod {
    boolean pay(double amount);
}